<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_config"
        android:name="com.uk.ac.ucl.carefulai.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.uk.ac.ucl.carefulai.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uk.ac.ucl.carefulai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.uk.ac.ucl.carefulai.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.uk.ac.ucl.carefulai.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>