<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/what_activities"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/setup_text1"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_bg"
        android:fadingEdge="horizontal|vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/save_care_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_light_blue_edge"
            android:onClick="activityscreen"
            android:padding="10dp"
            android:text="Continue"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:text="@string/config_name"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="350dp"
            android:layout_marginRight="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="phone"
            android:text="@string/config_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:text="@string/config_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="175dp"
            android:fontFamily="sans-serif-light"
            android:padding="2dp"
            android:text="@string/config_title"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="230dp"
            android:layout_marginRight="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="phone"
            android:text="@string/config_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="180dp"
            android:layout_marginRight="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:text="@string/config_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="135dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="phone"
            android:text="@string/config_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>